# release-canary-rust

./: .release-sync.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
CHANGELOG/: unreleased-canary-20260611150348.md  unreleased-canary-20260611151622.md  unreleased-canary-20260611152210.md  unreleased-canary-20260611154840.md
crates/canary/: Cargo.toml
crates/canary/src/: main.rs
crates/canaryapp/: Cargo.toml
crates/canaryapp/src/: lib.rs
tests/e2e/: canary.bats
